k8s/jkuzel02-app/web-service-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: jkuzel02-app
spec:
  selector:
    app: my-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
