k8s/jkuzel02-app/web-service-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: jkuzel02-app
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts: [ web-app-jkuzel02-app.dyn.cloud.e-infra.cz ]
      secretName: web-ingress-tls
  rules:
    - host: web-app-jkuzel02-app.dyn.cloud.e-infra.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
